# mantra-generator

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bulk-upload.sh
migrations/: 20260309174153_create_initial_schema.sql
milestones/: README.md
milestones/milestone-1-foundation/: issue-1-setup-project.md  issue-2-domain-models.md  issue-3-selection-logic.md  issue-4-unit-tests.md
milestones/milestone-2-persistence/: issue-1-database-schema.md  issue-2-repository-trait.md  issue-3-sqlite-implementation.md  issue-4-integration-tests.md
milestones/milestone-3-email/: issue-1-email-service-trait.md  issue-2-smtp-configuration.md  issue-3-email-adapter.md  issue-4-email-tests.md
milestones/milestone-4-cli-integration/: issue-1-cli-setup.md  issue-2-logging.md  issue-3-dependency-injection.md  issue-4-command-handlers.md  issue-5-seed-and-e2e.md
milestones/milestone-5-deployment/: issue-1-docker-image.md  issue-2-scheduling.md  issue-3-raspberry-pi-deployment.md  issue-4-production-hardening.md
milestones/milestone-6-enhancements/: issue-1-api-design.md  issue-2-implement-api.md  issue-3-authentication.md  issue-4-web-dashboard.md  issue-5-additional-features.md
scripts/: bulk-upload.sh  reset_db.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs  sqlite_repository.rs
src/config/: email.rs  mod.rs
src/domain/: mantra.rs  mod.rs  selector.rs
src/ports/: email_service.rs  mod.rs  repository.rs
tests/: repository_tests.rs
